@@ -1,0 +1,6 @@
+Testname: files-python-modules
+Sequence: 6000
+Version: 1.0
+Description: Test tags for misplaced Python modules
+Test-For:
+ python-module-in-wrong-location
