@@ -13,6 +13,7 @@ lintian (2.4.4) UNRELEASED; urgency=low
       - python-debug-in-wrong-location
       - debian-watch-contains-dh_make-template
       - missing-dependency-on-python-central
+      - python-module-in-wrong-location
 
   * checks/*:
     + [NT] Use the new pre-sorted file {index,info} when iterating over files.
@@ -72,6 +73,8 @@ lintian (2.4.4) UNRELEASED; urgency=low
       Jakub Wilk for the report.  (Closes: #576014)
     + [NT] Added check for missing dependency on python-central.
       Thanks to Jakub Wilk for the report.  (Closes: #592533)
+    + [NT] Added check for malplaced Python modules. Thanks to
+      Jakub Wilk for the report.  (Closes: #576012)
   * checks/menu-format.desc:
     + [CW] Fix several typos.
   * checks/menus.desc:
